# oop

./: .clang-format  .gitignore  .markdownlint.json  README.md  youtube.html
coding-conventions/: CppCodingConventions.sln  cpp_coding_conventions.md
coding-conventions/CppCodingConventions/: CppCodingConventions.cpp  CppCodingConventions.vcxproj  CppCodingConventions.vcxproj.filters  MyClassName.cpp  MyClassName.h  ReadMe.txt  stdafx.cpp
exam/: README.md
labs/checklist/: README.md
labs/lab1/: lab1.sln
labs/lab1/CalcBits/: CalcBits.cpp  CalcBits.vcxproj  CalcBits.vcxproj.filters
labs/lab1/CopyFile/: CopyFile.vcxproj  CopyFile.vcxproj.filters  copyfile.cpp  expected-output-when-input-file-is-missing.txt  multiline.txt  test.bat
labs/lab1/FindText/: FindText.vcxproj  main.cpp
labs/lab1/Replace/: Replace.cpp  (+5 more)
labs/lab2/: lab2.sln
labs/lab3/: lab3.sln
labs/lab4/: bodies.drawio  lab4.sln
labs/lab6/: lab6.sln
labs/lab7/: lab7.sln
lectures/: README.md  TODO.md
lectures/01/: README.md  schemas.drawio  Синтаксис C++ - 1 часть.quiz  Синтаксис C++.pptx  Стандартная библиотека.pptx  Указатели и динамическая память.pptx
lectures/02/: oop-basics.drawio  Основы ООП.pptx  Тест.pptx
lectures/03/: inheritance.drawio  relationship.drawio  Виды отношений между классами.pptx  Композиция, наследование и полиморфизм.pptx  Наследование и полиморфизм.pptx  Тест.pptx  Тест2.pptx
lectures/04/: Дружественные функции и классы. Перегрузка операций.pptx  Тест.pptx
lectures/05/: TODO.md  diagram.drawio  Обработка ошибок и исключительных ситуаций.pptx  Тест.pptx  Тест1.pptx  Тест2.pptx  Указатели и динамическая память.pptx
lectures/06/: templates.drawio  Обобщенное программирование, шаблоны.pptx  Тест.pptx
presentations/: Современный C++. 5 крутых фишек.pptx  Современный подход к разработке C++ приложений.pptx
samples/01-basics/: cpp-samples.sln  sandbox.cpp
samples/01-basics/type-aliases/: CMakeLists.txt  type-aliases.cpp  type-aliases.h
samples/02-stl-tdd/: 02-stl-tdd.sln  container_benchmarks.md
samples/02-stl-tdd/std_list/: CMakeLists.txt  std_list.cpp
samples/03-classes/: 03.sln
samples/03-classes/move_vs_copy/: CMakeLists.txt  move_vs_copy.cpp
samples/03-classes/samples_for_lecture/rational_ctor/: CMakeLists.txt  rational_ctor.cpp  rational_ctor.h
samples/04-inheritance/: 04.sln
samples/advanced/: advanced_samples.sln
samples/operator_overloading/: operator_overloading.sln
samples/templates/: templates.sln
samples/using_boost/: my_solution.sln
tasks/: .markdownlint.json  README.md
tasks/01/: README.md  lab01.docx
tasks/02/: README.md  lab02.docx
tasks/03/: README.md  lab03.docx
tasks/04/: README.md  lab04.docx  shapes.vsdx
tasks/05/: README.md  lab05.docx
tasks/06/: README.md  lab06.docx
tasks/07/: README.md  lab07.docx
yandex-contest/: README.md  example1.md
yandex-contest/makefile-scripts/: Makefile  build.sh  run.sh
(+592 files in other folders)
